project(engine)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -std=c++17")
include_directories("${engine_SOURCE_DIR}/include")
add_library(collision src/collision.cc)
add_library(object src/object.cc)
target_link_libraries(object collision)
add_executable(main src/main.cc)
target_link_libraries(main object)
install(TARGET main RUNTIME DESTINATION "${engine_SOURCE_DIR}/bin")
